--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "prop-types": "^15.6.2",
     "react": "^16.8.6"
   },
   "devDependencies": {
@@ -33,7 +34,10 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "prop-types": "^15.6.2"
+    "@babel/plugin-proposal-class-properties": "^7.5.0"
+  },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
   }
 }
