Better configuration for release-it

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,9 +1,15 @@
 {
   "src": {
+    "commitMessage": "chore: release %s",
     "tagName": "v%s"
   },
-  "pkgFiles": ["package.json"],
   "requireUpstream": false,
   "beforeChangelogCommand": "auto-changelog",
-  "safeBump": false
+  "safeBump": false,
+  "github": {
+    "release": true
+  },
+  "npm": {
+    "publish": true
+  }
 }
